--- a/package.json
+++ b/package.json
@@ -11,5 +11,11 @@
     "qr",
     "example",
     "demo"
-  ]
+  ],
+  "scripts": {
+    "lint": "standard"
+  },
+  "devDependencies": {
+    "standard": "^11.0.1"
+  }
 }
